--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>Memory — Lật Thẻ (4x4)</title>
 <style>
   :root{
-    --card-size: 100px; /* kích thước thẻ (theo yêu cầu) */
+    --card-size: 100px;
     --gap: 12px;
     --bg: #111;
     --card-back: #2c3e50;
@@ -62,6 +62,8 @@
     cursor:pointer;
     font-weight:600;
   }
+
+  /* Board grid */
   .board{
     display:grid;
     grid-template-columns: repeat(4, var(--card-size));
@@ -118,6 +120,7 @@
     display:block;
   }
 
+  /* Footer */
   .footer {
     margin-top:12px;
     display:flex;
@@ -126,6 +129,28 @@
     align-items:center;
   }
   .hint{ font-size:13px; color:#bcd; opacity:0.9 }
+
+  /* Column & row labels */
+  .col-labels{
+    width: calc((var(--card-size) * 4) + (var(--gap) * 3));
+    margin: 0 auto 6px auto;
+    display: grid;
+    grid-template-columns: repeat(4, var(--card-size));
+    text-align: center;
+    font-size: 18px;
+    font-weight: 600;
+    color: #cfe2ff;
+  }
+
+  .row-labels{
+    display: grid;
+    grid-template-rows: repeat(4, var(--card-size));
+    align-items: center;
+    font-size: 18px;
+    font-weight: 600;
+    color: #cfe2ff;
+  }
+
   @media (max-width:520px){
     :root{ --card-size: 80px; --gap:10px; }
     .container{ width: calc((var(--card-size) * 4) + (var(--gap) * 3) + 20px); }
@@ -150,21 +175,36 @@
     </header>
 
     <main>
-      <div id="board" class="board" aria-label="Game board"></div>
-      <div class="footer">
-        <div class="hint">Click 2 thẻ để so sánh. Dùng ảnh trong thư mục <code>images/</code> (back.png, 1.png … 8.png) hoặc game sẽ dùng emoji.</div>
-        <div style="opacity:0.9">Made with plain HTML/CSS/JS</div>
+
+      <!-- LABEL CỘT -->
+      <div class="col-labels">
+        <div>A</div><div>B</div><div>C</div><div>D</div>
       </div>
+
+      <div style="display:flex; justify-content:center; gap:10px;">
+
+        <!-- LABEL HÀNG -->
+        <div class="row-labels">
+          <div>1</div>
+          <div>2</div>
+          <div>3</div>
+          <div>4</div>
+        </div>
+
+        <!-- BOARD -->
+        <div id="board" class="board"></div>
+
+      </div>
+
+      <div class="footer">
+        <div class="hint">Dùng ảnh trong thư mục <code>images/</code> (back.png, 1.png … 8.png).</div>
+        <div style="opacity:0.9">Made with HTML/CSS/JS</div>
+      </div>
+
     </main>
   </div>
 
 <script>
-/*
-  Memory game (4x4) - 8 pairs
-  - If images exist in images/back.png and images/1.png..8.png, load them.
-  - Otherwise use a fallback emoji set.
-*/
-
 const PAIRS = 8;
 const SIZE = PAIRS * 2;
 const boardEl = document.getElementById('board');
@@ -172,17 +212,15 @@ const movesEl = document.getElementById('moves');
 const timeEl = document.getElementById('time');
 const restartBtn = document.getElementById('restartBtn');
 
-let cards = [];       // shuffled card indexes (0..7 duplicated)
-let revealed = [];    // boolean
+let cards = [];
+let revealed = [];
 let first = -1;
 let lock = false;
 let moves = 0;
 let matched = 0;
 
-// fallback emojis (8 distinct)
 const EMOJI = ['🍎','🍌','🍇','🍒','🍉','🍓','🍑','🥝'];
 
-// try load images: check if images/back.png exists by requesting it
 let hasImages = false;
 function checkImage(path){
   return new Promise(resolve => {
@@ -194,12 +232,12 @@ function checkImage(path){
 }
 
 async function init(){
-  // check if images/back.png exists
   hasImages = await checkImage('images/back.png');
-  // prepare cards
+
   cards = [];
   for(let i=0;i<PAIRS;i++){ cards.push(i); cards.push(i); }
   shuffle(cards);
+
   revealed = Array(SIZE).fill(false);
   first = -1;
   lock = false;
@@ -224,53 +262,44 @@ function renderBoard(){
     c.className = 'card';
     c.dataset.index = i;
 
-    // front (face up)
     const front = document.createElement('div');
     front.className = 'face front';
     if(hasImages){
       const img = document.createElement('img');
       img.src = `images/${cards[i]+1}.png`;
-      img.alt = 'card';
       front.appendChild(img);
     } else {
       front.style.background = '#fff';
       front.style.color = '#222';
-      front.style.fontSize = '48px';
       front.textContent = EMOJI[cards[i]];
     }
 
-    // back (face down)
     const back = document.createElement('div');
     back.className = 'face back';
     if(hasImages){
       const img = document.createElement('img');
       img.src = 'images/back.png';
-      img.alt = 'back';
       back.appendChild(img);
     } else {
       back.textContent = '★';
-      back.style.fontSize = '28px';
     }
 
     c.appendChild(front);
     c.appendChild(back);
-
     if(revealed[i]) c.classList.add('flipped');
-
     c.addEventListener('click', onCardClick);
+
     boardEl.appendChild(c);
   }
 }
 
-// handle click
-function onCardClick(e){
+function onCardClick(){
   if(lock) return;
   const idx = Number(this.dataset.index);
   if(revealed[idx]) return;
 
   if(!timerRunning) startTimer();
 
-  // flip
   revealCard(idx);
 
   if(first === -1){
@@ -278,101 +307,84 @@ function onCardClick(e){
     return;
   }
 
-  // second card
   moves++;
   movesEl.textContent = moves;
   lock = true;
 
   if(cards[first] === cards[idx]){
-    // match
     revealed[first] = true;
     revealed[idx] = true;
     matched++;
-    // keep flipped (already flipped visually)
-    setTimeout(()=> {
-      // mark as locked so cannot click further on those
+
+    setTimeout(()=>{
       const el1 = boardEl.querySelector(`.card[data-index="${first}"]`);
       const el2 = boardEl.querySelector(`.card[data-index="${idx}"]`);
-      if(el1) el1.classList.add('locked');
-      if(el2) el2.classList.add('locked');
-
+      el1.classList.add('locked');
+      el2.classList.add('locked');
       first = -1;
       lock = false;
 
-      if(matched === PAIRS) {
+      if(matched === PAIRS){
         stopTimer();
-        setTimeout(()=> alertMessage(), 300);
+        setTimeout(()=> alert(`Chúc mừng — bạn thắng!\nMoves: ${moves}\nTime: ${timeEl.textContent}`),300);
       }
-    }, 300);
+    },300);
+
   } else {
-    // not match: show, then hide
-    setTimeout(()=> {
+    setTimeout(()=>{
       hideCard(first);
       hideCard(idx);
       first = -1;
       lock = false;
-    }, 700);
+    },700);
   }
 }
 
 function revealCard(i){
   revealed[i] = true;
   const el = boardEl.querySelector(`.card[data-index="${i}"]`);
-  if(el) el.classList.add('flipped');
+  el.classList.add('flipped');
 }
 
 function hideCard(i){
   revealed[i] = false;
   const el = boardEl.querySelector(`.card[data-index="${i}"]`);
-  if(el) el.classList.remove('flipped');
-}
-
-function alertMessage(){
-  const time = timeEl.textContent;
-  setTimeout(()=> {
-    alert(`Chúc mừng — bạn thắng!\nMoves: ${moves}\nTime: ${time}`);
-  }, 50);
+  el.classList.remove('flipped');
 }
 
 /* Timer */
-let timerInterval = null;
-let timerStart = 0;
-let timerRunning = false;
+let timerInterval=null, timerStart=0, timerRunning=false;
+
 function startTimer(){
-  if(timerRunning) return;
   timerRunning = true;
   timerStart = Date.now();
-  timerInterval = setInterval(updateTimer, 500);
+  timerInterval = setInterval(updateTimer,500);
 }
 function updateTimer(){
-  const diff = Date.now() - timerStart;
-  const s = Math.floor(diff / 1000);
-  const mm = String(Math.floor(s / 60)).padStart(2,'0');
-  const ss = String(s % 60).padStart(2,'0');
+  const diff = Date.now()-timerStart;
+  const s = Math.floor(diff/1000);
+  const mm = String(Math.floor(s/60)).padStart(2,'0');
+  const ss = String(s%60).padStart(2,'0');
   timeEl.textContent = `${mm}:${ss}`;
 }
 function stopTimer(){
-  timerRunning = false;
+  timerRunning=false;
   clearInterval(timerInterval);
-  timerInterval = null;
 }
 function resetTimer(){
   stopTimer();
   timeEl.textContent = '00:00';
 }
 
-/* Restart */
-restartBtn.addEventListener('click', async () => {
-  // small animation: flip all down
-  const cardsEls = boardEl.querySelectorAll('.card');
-  cardsEls.forEach(c => { c.classList.remove('locked'); c.classList.remove('flipped'); });
-  await sleep(120);
+restartBtn.addEventListener('click', async ()=>{
+  document.querySelectorAll('.card').forEach(c=>{
+    c.classList.remove('locked');
+    c.classList.remove('flipped');
+  });
+  await new Promise(r=>setTimeout(r,120));
   init();
 });
 
-function sleep(ms){ return new Promise(r=>setTimeout(r, ms)); }
-
-// initialize on load
 init();
 </script>
 </body>
