--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Memory — Lật Thẻ (4x4)</title>
+<title>Lật Thẻ Giáng sinh</title>
 <style>
   :root{
     --card-size: 100px;
