--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
   <div class="container">
     <header>
       <div>
-        <h1>Memory — Lật thẻ (4×4)</h1>
+        <h1>Lật Thẻ Giáng Sinh</h1>
         <div style="font-size:13px; color:#bcd; margin-top:6px">
           8 cặp — 16 thẻ — kích thước thẻ: <strong>100×100</strong>
         </div>
