--- a/index.html
+++ b/index.html
@@ -197,8 +197,8 @@
       </div>
 
       <div class="footer">
-        <div class="hint">Dùng ảnh trong thư mục <code>images/</code> (back.png, 1.png … 8.png).</div>
-        <div style="opacity:0.9">Made with HTML/CSS/JS</div>
+        <div class="hint"></code>.</div>
+        <div style="opacity:0.9"></div>
       </div>
 
     </main>
