--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
       <div>
         <h1>Lật Thẻ Giáng Sinh</h1>
         <div style="font-size:13px; color:#bcd; margin-top:6px">
-          8 cặp — 16 thẻ — kích thước thẻ: <strong>100×100</strong>
+          The Blouse 4
         </div>
       </div>
 
